# ziti-tunnel-android

./: .gitignore  README.md  WhiteLabeling.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: dependabot.yml  release-drafter.yml
.github/actions/dependencies/: action.yml
.github/actions/gradle/: action.yml
.github/workflows/: android.yml  build-dependencies.yml  build.yml  bump.yml  mattermost-ziti-webhook.yml  release.yml
app/: build.gradle  build.gradle.kts
app/src/debug/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/play/: contact-website.txt
app/src/main/res/drawable/: buttonskin.xml  cardskin.xml  frame.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: about.xml  activity_debug_info.xml  activity_ziti_enrollment.xml  advanced.xml  card.xml  configuration.xml  dashboard.xml  fragment_debug_info.xml  identities.xml  identity.xml  identityitem.xml  line.xml  log.xml  logs.xml  main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/transition/: fade.xml  slide.xml
app/src/main/res/values/: attrs_my_view.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/main/resources/: android-logger.properties
buildSrc/: git.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tunnel/: CMakeLists.txt  CMakePresets.json  build.gradle  build.gradle.kts  vcpkg-configuration.json  vcpkg.json
tunnel/src/main/: AndroidManifest.xml
tunnel/src/main/cpp/: CMakeLists.txt  keychain.cpp  logging.cpp  netif.cpp  netif.h  tunnel.cpp
tunnel/src/main/play/: contact-email.txt
tunnel/src/main/res/drawable/: ic_launcher_background.xml
tunnel/src/main/res/layout/: about.xml  advanced.xml  identity.xml  (+2 more)
tunnel/src/main/resources/: android-logger.properties
ziti-native-tunnel/: build.gradle.kts
ziti-native-tunnel/src/main/cpp/: CMakeLists.txt  tunnel.cpp
(+80 files in other folders)
